# tqp

./: .gitignore  LICENSE  README.md  stack.yaml  tqp.cabal
fixtures/: sample.txt  sampleAllSegments.txt  sampleFlightHotel.txt
src/: Car.hs  Flight.hs  Helpers.hs  Hotel.hs  Lib.hs
