name:                tqp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/supermario/tqp#readme
license:             BSD3
license-file:        LICENSE
author:              Mario Rogic
maintainer:          hello@mario.net.au
copyright:           2017 Mario Rogic
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Helpers, Flight, Hotel, Car
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , time
                     , pretty-show
  default-language:    Haskell2010


executable tqp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tqp
  default-language:    Haskell2010

test-suite tqp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tqp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/supermario/tqp
